--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
             var noButton = document.getElementById('noButton');
             var x = Math.random() * (window.innerWidth - noButton.offsetWidth) - 85;
             var y = Math.random() * (window.innerHeight - noButton.offsetHeight) - 48;
-            noButton.style.left = ${x}px;
-            noButton.style.top = ${y}px;
+            noButton.style.left = `${x}px`;
+            noButton.style.top = `${y}px`;
         }
     </script>
 </body>
