--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 <body>
     <div class="container" id="mainPage">
         <div>
-            <h1 class="header_text">Do you wanna go out with me?</h1>
-            <h1 class="header_text">Are you free tomorrow?</h1>
+            <h1 class="header_text">HEY MUDDU?</h1>
+            <h1 class="header_text">DO YOU LOVE ME?</h1>
         </div>
         <div class="gif_container">
             <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDdtZ2JiZDR0a3lvMWF4OG8yc3p6Ymdvd3g2d245amdveDhyYmx6eCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/cLS1cfxvGOPVpf9g3y/giphy.gif" alt="Cute animated illustration">
@@ -125,7 +125,7 @@
 
     <div class="container hidden" id="yesPage">
         <div>
-            <h1 class="header_text">Hurrayyyy!!</h1>
+            <h1 class="header_text">Hurrayyyyyyyy I LOVE YOU TOOOOOOOOOOOO</h1>
         </div>
         <div class="gif_container">
             <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
